fixed watchnow and text positioning on mobile portrait.

--- a/src/components/Episode/styles.scss
+++ b/src/components/Episode/styles.scss
@@ -47,6 +47,7 @@ $fade-color: var(--background_color);
 			.body {
 				order: 3;
 				margin-top: 1.5em;
+				margin-bottom: 1.5em;
 				line-height: 1.5;
 				overflow-y: hidden;
 				font-size: 1em;
@@ -74,9 +75,9 @@ $fade-color: var(--background_color);
 			}
 
 	.watchNow {
+		order: 5;
 		position: relative;
-		margin-top: -1em;
-		margin-bottom: 5em;
+		margin-bottom: 3em;
     	border-color: #4e4e4e;
     	opacity: 1;
 		animation: none;
@@ -89,19 +90,17 @@ $fade-color: var(--background_color);
 		padding: 0;
 	}
 
-		.container {
-			display: flex;
-			flex-direction: row;
-
+		.content {
+			order: 1;
+			width: 50%;
+			padding-left: 5%;
+			padding-right: 5%;
+			justify-content: center;
 		}
 
-			.content {
-				order: 1;
-				width: 50%;
-				padding-left: 5%;
-				padding-right: 5%;
-				justify-content: center;
-			}
+	.watchNow {
+		margin-bottom: 0em;
+	}
 }
 
 //Tablet portrait
